--- a/styles/style.css
+++ b/styles/style.css
@@ -2,36 +2,11 @@ body {
   width: 1100px;
   margin: 0 auto;
   font-family: 'Raleway';
-  background-color: #fff;
   color: #000;
-  -webkit-font-smoothing: antialiased;
+  background-color: #fff;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-ul,
-ol,
-li {
-  margin: 0;
-  padding: 0;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-img {
-  display: block;
-  max-width: 100%;
-  height: auto;
-}
-
+/* HEADER */
 .header {
   display: grid;
   grid-template-columns: 1fr min-content 1fr;
@@ -41,8 +16,6 @@ img {
 
 .header__menu-list {
   display: flex;
-  list-style: none;
-  align-items: center;
   gap: 32px;
 }
 
@@ -51,7 +24,7 @@ img {
 }
 
 .header__menu-item:not(:last-child)::after {
-  content: '•';
+  content: "•";
   position: absolute;
   right: -20px;
 }
@@ -61,12 +34,13 @@ img {
 }
 
 .header__address {
+  justify-self: end;
   font-style: normal;
   font-size: 18px;
-  line-height: 1.4;
-  justify-self: end;
+  line-height: 1.2;
 }
 
+/* COVER */
 .cover {
   position: relative;
   background-image: url(../images/cover.jpg);
@@ -83,10 +57,10 @@ img {
   position: absolute;
   inset: 0;
   background-color: rgba(0, 0, 0, 0.6);
-  z-index: 0;
 }
 
 .cover__title {
+  position: relative;
   display: flex;
   flex-direction: column;
   gap: 20px;
@@ -94,14 +68,14 @@ img {
   font-size: 100px;
   font-weight: 700;
   line-height: 1;
-  z-index: 1;
   text-transform: uppercase;
+  z-index: 1;
 }
 
 .aligned-text {
-  display: block;
   letter-spacing: 0.3em;
   margin-right: -0.3em;
+  /* Компенсация letter-spacing для центрирования */
 }
 
 .aligned-text_center {
@@ -113,47 +87,43 @@ img {
 }
 
 .cover__description {
+  position: relative;
   display: flex;
   align-items: center;
   justify-content: flex-end;
   gap: 78px;
   z-index: 1;
-  color: #fff;
 }
 
 .cover__description-text {
+  color: #fff;
   font-size: 22px;
   text-transform: uppercase;
   word-spacing: 18px;
 }
 
 .bet-button {
-  background-color: transparent;
   border: 1px solid #fff;
   color: #fff;
   padding: 12px 31px;
-  font-family: inherit;
   font-size: 22px;
-  cursor: pointer;
   text-transform: uppercase;
 }
 
+/* LOTS */
 .lots {
   padding: 180px 50px 0;
 }
 
 .lots__heading {
   font-size: 40px;
-  text-transform: uppercase;
   margin-bottom: 27px;
   padding-left: 65px;
 }
 
 .lots__card-list {
   display: flex;
-  justify-content: space-between;
   gap: 25px;
-  list-style: none;
 }
 
 .lots__card-list-item {
@@ -163,11 +133,11 @@ img {
 
 .card {
   position: relative;
+  height: 100%;
+  padding: 50px 40px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 100%;
-  padding: 50px 40px;
   background-size: cover;
   background-position: center;
   color: #fff;
@@ -187,10 +157,10 @@ img {
 
 .card__title {
   font-size: 22px;
+  font-weight: 700;
   text-decoration: underline;
   text-transform: uppercase;
   z-index: 1;
-  line-height: 1.2;
 }
 
 .card__text {
@@ -200,13 +170,14 @@ img {
 }
 
 .lots__look-more-link {
-  display: inline-block;
+  display: block;
   margin-top: 30px;
+  padding-left: 65px;
   font-size: 20px;
   text-decoration: underline;
-  padding-left: 65px;
 }
 
+/* ABOUT */
 .about {
   display: grid;
   grid-template-columns: 334px 1fr;
@@ -214,15 +185,20 @@ img {
   gap: 30px;
 }
 
+.about__column_type_logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .about__logo {
-  background-color: #000;
   width: 240px;
   height: 240px;
+  background-color: #000;
   border-radius: 50%;
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 0 auto;
 }
 
 .about__logo-image {
@@ -231,8 +207,8 @@ img {
 
 .about__title {
   font-size: 40px;
-  text-transform: uppercase;
   margin: 100px 0 40px;
+  text-transform: uppercase;
 }
 
 .about__text p {
@@ -241,6 +217,7 @@ img {
   margin-bottom: 25px;
 }
 
+/* FOOTER */
 .footer {
   display: grid;
   grid-template-columns: 1fr min-content 1fr;
@@ -250,38 +227,21 @@ img {
 
 .footer__menu-list {
   display: flex;
-  list-style: none;
   gap: 32px;
-}
-
-.footer__menu-list li {
-  position: relative;
-}
-
-.footer__menu-list li:not(:last-child)::after {
-  content: '•';
-  position: absolute;
-  right: -20px;
 }
 
 .footer__social-list {
   display: flex;
   gap: 16px;
-  justify-content: flex-end;
-  list-style: none;
+  justify-self: end;
 }
 
 .footer__social-link {
   display: flex;
-  align-items: center;
-  justify-content: center;
   width: 48px;
   height: 48px;
   border: 1px solid #000;
   border-radius: 50%;
-}
-
-.footer__social-icon {
-  width: 24px;
-  height: 24px;
+  justify-content: center;
+  align-items: center;
 }
